force-app/main/default/objects/OM_EngagementHistory__c/OM_EngagementHistory__c.object-meta.xml
<CustomObject>
    <label>Histórico de comunicación</label>
    <nameField>
        <displayFormat>EH-{0000000000}</displayFormat>
        <label>Engagement History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Históricos de comunicaciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>