force-app/main/default/objects/OM_EngagementHistory__c/fields/OM_AccountId__c.field-meta.xml
<CustomField>
    <fullName>OM_AccountId__c</fullName>
    <formula>CASESAFEID(OM_Case__r.AccountId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountId</label>
    <type>Text</type>
</CustomField>