force-app/main/default/objects/OM_EngagementHistory__c/fields/OM_Case__c.field-meta.xml
<CustomField>
    <fullName>OM_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Históricos de comunicaciones</relationshipLabel>
    <relationshipName>OM_EngagementHistory</relationshipName>
    <type>Lookup</type>
</CustomField>