force-app/main/default/objects/OM_EngagementHistory__c/fields/OM_Department__c.field-meta.xml
<CustomField>
    <fullName>OM_Department__c</fullName>
    <formula>Owner:User.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departamento</label>
    <type>Text</type>
</CustomField>