force-app/main/default/objects/OM_EngagementHistory__c/fields/OM_Message__c.field-meta.xml
<CustomField>
    <fullName>OM_Message__c</fullName>
    <label>Mensaje</label>
    <type>TextArea</type>
</CustomField>