force-app/main/default/objects/OM_EngagementHistory__c/fields/OM_Phone__c.field-meta.xml
<CustomField>
    <fullName>OM_Phone__c</fullName>
    <label>Teléfono</label>
    <type>Phone</type>
</CustomField>