force-app/main/default/objects/OM_EngagementHistory__c/fields/OM_SendingDate__c.field-meta.xml
<CustomField>
    <fullName>OM_SendingDate__c</fullName>
    <label>Fecha y hora envío</label>
    <type>DateTime</type>
</CustomField>