force-app/main/default/objects/OM_EngagementHistory__c/fields/OM_Type__c.field-meta.xml
<CustomField>
    <fullName>OM_Type__c</fullName>
    <label>Tipo de envío</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financiero</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>