force-app/main/default/objects/OM_EngagementHistory__c/recordTypes/OM_SMS.recordType-meta.xml
<RecordType>
    <fullName>OM_SMS</fullName>
    <active>true</active>
    <label>SMS</label>
</RecordType>