force-app/main/default/objects/OM_EngagementHistory__c/recordTypes/OM_Whatsapp.recordType-meta.xml
<RecordType>
    <fullName>OM_Whatsapp</fullName>
    <active>true</active>
    <label>Whatsapp</label>
</RecordType>